--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: -apple-system, BlinkMacSystemFont, "Pretendard", "Segoe UI", Roboto, sans-serif;
             color: #ffffff;
             overflow-x: hidden;
-            background-color: #000;
+            background-color: transparent;
         }
         
         a { text-decoration: none; color: inherit; transition: opacity 0.3s; }
@@ -160,8 +160,8 @@
 <body>
 
    <div class="video-background">
-   <iframe 
-    src="https://www.youtube.com/embed/qC0vDKVPCrw?autoplay=1&mute=1&controls=0&loop=1&playlist=qC0vDKVPCrw&playsinline=1" 
+<iframe 
+    src="https://www.youtube.com/embed/mwyfdKKhhAk?autoplay=1&mute=1&controls=0&loop=1&playlist=mwyfdKKhhAk&playsinline=1" 
     title="YouTube video player" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
