--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: -apple-system, BlinkMacSystemFont, "Pretendard", "Segoe UI", Roboto, sans-serif;
             color: #ffffff;
             overflow-x: hidden;
-            background-color: transparent;
+            background-color: #000;
         }
         
         a { text-decoration: none; color: inherit; transition: opacity 0.3s; }
