--- a/history.html
+++ b/history.html
@@ -9,23 +9,43 @@
            스타일 (index.html과 동일하게 유지)
         ========================================= */
         * { margin: 0; padding: 0; box-sizing: border-box; }
+        
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Pretendard", "Segoe UI", Roboto, sans-serif;
-            color: #ffffff; overflow-x: hidden; background-color: #000;
+            color: #ffffff; 
+            overflow-x: hidden; 
+            background-color: #000; /* ✅ [중요] 배경을 투명하게 해서 뒤에 있는 영상을 보이게 함 */
             line-height: 1.6;
         }
+
         a { text-decoration: none; color: inherit; transition: opacity 0.3s; }
         a:hover { opacity: 0.7; }
 
-        /* 배경 동영상 */
+        /* =========================================
+           [수정됨] 유튜브 배경 동영상 설정
+        ========================================= */
         .video-background {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             z-index: -1; overflow: hidden;
+            pointer-events: none; /* 영상 클릭 방지 */
         }
-        .video-background video { width: 100%; height: 100%; object-fit: cover; }
+
+        /* 유튜브 iframe을 화면 정중앙에 꽉 차게 맞추는 코드 */
+        .video-background iframe {
+            width: 100vw;
+            height: 56.25vw; /* 16:9 비율 (가로 기준) */
+            min-height: 100vh;
+            min-width: 177.77vh; /* 16:9 비율 (세로 기준) */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
         .overlay {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.75); /* 글씨 가독성을 위해 조금 더 어둡게 설정 */
+            background: rgba(0, 0, 0, 0.75); /* 글씨 잘 보이게 어두운 막 씌우기 */
+            z-index: 0;
         }
 
         /* 레이아웃 */
@@ -43,9 +63,9 @@
         .nav-links a { margin-left: 30px; font-size: 0.95rem; font-weight: 500; color: #bbb; }
         .nav-links a.active { color: #fff; font-weight: 700; } /* 현재 페이지 표시 */
 
-        /* [변경점] 서브 페이지용 페이지 타이틀 섹션 */
+        /* 서브 페이지용 페이지 타이틀 섹션 */
         .page-header {
-            height: 50vh; /* 높이를 메인화면(100vh)의 절반으로 줄임 */
+            height: 50vh; 
             min-height: 400px;
             display: flex; flex-direction: column;
             justify-content: center; padding-top: 80px;
@@ -67,7 +87,7 @@
         .img-box {
             width: 100%; height: 400px; border-radius: 24px; overflow: hidden;
             box-shadow: 0 20px 40px rgba(0,0,0,0.5); border: 1px solid rgba(255,255,255,0.1);
-            position: sticky; top: 100px; /* 스크롤 내릴 때 이미지가 따라오게 함 */
+            position: sticky; top: 100px; 
         }
         .img-box img { width: 100%; height: 100%; object-fit: cover; transition: transform 0.7s; }
         .img-box:hover img { transform: scale(1.05); }
@@ -98,9 +118,14 @@
 <body>
 
     <div class="video-background">
-        <video autoplay muted loop playsinline>
-            <source src="bg.mp4" type="video/mp4">
-        </video>
+        <iframe 
+            src="https://www.youtube.com/embed/mwyfdKKhhAk?autoplay=1&mute=1&controls=0&loop=1&playlist=mwyfdKKhhAk&playsinline=1" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            style="pointer-events: none;" 
+            allowfullscreen>
+        </iframe>
         <div class="overlay"></div>
     </div>
 
@@ -108,7 +133,8 @@
         <div class="logo">X2R <span>.</span></div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="history.html" class="active">History</a> <a href="projects.html" target="_blank">Projects</a>
+            <a href="history.html" class="active">History</a> 
+            <a href="projects.html">Projects</a>
         </nav>
     </header>
 
