--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X2R History - Innovation Timeline</title>
     <style>
-/* 유튜브 영상을 배경으로 깔기 위한 설정 */
+ /* =========================================
+      1. 기본 설정 (Reset)
+   ========================================= */
+   * { margin: 0; padding: 0; box-sizing: border-box; }
+   
+   body {
+       font-family: -apple-system, BlinkMacSystemFont, "Pretendard", "Segoe UI", Roboto, sans-serif;
+       color: #ffffff;
+       overflow-x: hidden;
+       background-color: #000;
+   }
+   
+   a { text-decoration: none; color: inherit; transition: opacity 0.3s; }
+   a:hover { opacity: 0.7; }
+   
+  /* 유튜브 영상을 배경으로 깔기 위한 설정 (이걸 붙여넣기) */
 .hero {
     position: relative;
     height: 500px;
     display: flex;
     align-items: center;
-    justify-content: center; /* 글자 가운데 정렬 */
+    justify-content: center;
     text-align: center;
-    overflow: hidden; /* 삐져나온 영상 자르기 */
+    overflow: hidden;
     margin-top: 70px;
     color: #fff;
 }
@@ -24,33 +39,141 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1; /* 글자보다 뒤에 위치 */
-    pointer-events: none; /* 영상 클릭 방지 */
+    z-index: 1; 
+    pointer-events: none; 
 }
 
 .video-background iframe {
     width: 100vw;
-    height: 56.25vw; /* 16:9 비율 유지 (가로 기준) */
+    height: 56.25vw; 
     min-height: 100vh;
-    min-width: 177.77vh; /* 16:9 비율 유지 (세로 기준) */
+    min-width: 177.77vh; 
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* 정중앙 맞추기 */
+    transform: translate(-50%, -50%); 
+}
+
+   /* =========================================
+      3. 레이아웃 & 디자인
+   ========================================= */
+   .container {
+       max-width: 1200px; margin: 0 auto; padding: 0 20px;
+       position: relative;
+   }
+
+   /* 헤더 */
+   header {
+       position: fixed; top: 0; width: 100%; z-index: 100;
+       padding: 20px 40px; display: flex; justify-content: space-between; align-items: center;
+       backdrop-filter: blur(8px);
+       border-bottom: 1px solid rgba(255,255,255,0.1);
+   }
+   .logo { font-weight: 800; font-size: 1.8rem; letter-spacing: -0.5px; }
+   .logo span { color: #3b82f6; } /* X2R 포인트 컬러 (블루) */
+   
+   .nav-links a { margin-left: 30px; font-size: 0.95rem; font-weight: 500; color: #ddd; }
+
+   /* 히어로 섹션 */
+   .hero-section {
+       height: 100vh; display: flex; flex-direction: column;
+       justify-content: center; padding-top: 60px;
+   }
+
+   .year-label {
+       display: inline-block;
+       font-size: 1.2rem; font-weight: 700; color: #3b82f6;
+       margin-bottom: 10px; letter-spacing: 2px;
+       animation: slideUp 1s ease-out forwards;
+   }
+
+   .hero-title {
+       font-size: clamp(3rem, 7vw, 6rem);
+       font-weight: 800; line-height: 1.1; margin-bottom: 20px;
+       letter-spacing: -2px;
+       animation: slideUp 1.2s ease-out 0.2s forwards;
+       opacity: 0;
+   }
+
+   .hero-desc {
+       font-size: 1.3rem; max-width: 650px; color: #ccc; line-height: 1.6;
+       animation: slideUp 1.2s ease-out 0.4s forwards;
+       opacity: 0;
+   }
+
+   /* 콘텐츠 섹션 (연혁) */
+   section.history-block { padding: 120px 0; border-top: 1px solid rgba(255,255,255,0.1); }
+   
+   .grid-layout {
+       display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: center;
+   }
+   @media (max-width: 900px) { .grid-layout { grid-template-columns: 1fr; gap: 40px; } }
+
+   /* 이미지 컨테이너 */
+   .img-box {
+       width: 100%; height: 450px; border-radius: 24px;
+       overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.6);
+       border: 1px solid rgba(255,255,255,0.1);
+   }
+   .img-box img {
+       width: 100%; height: 100%; object-fit: cover;
+       transition: transform 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+   }
+   .img-box:hover img { transform: scale(1.05); }
+
+   /* 텍스트 박스 */
+   .text-box .year {
+       font-size: 4rem; font-weight: 900; color: transparent;
+       -webkit-text-stroke: 1px rgba(255,255,255,0.3); margin-bottom: 10px;
+       display: block; line-height: 1;
+   }
+   .text-box h2 { font-size: 2.2rem; margin-bottom: 20px; line-height: 1.2; font-weight: 700; }
+   
+   /* 연혁 리스트 스타일 */
+   .history-list { list-style: none; border-left: 2px solid rgba(255,255,255,0.2); padding-left: 20px; }
+   .history-list li { margin-bottom: 15px; font-size: 1.1rem; color: #ccc; position: relative; }
+   .history-list li::before {
+       content: ''; position: absolute; left: -27px; top: 8px;
+       width: 12px; height: 12px; background: #3b82f6; border-radius: 50%;
+   }
+   .history-list li span { display: block; font-size: 0.9rem; color: #777; margin-bottom: 4px; }
+
+   /* =========================================
+      4. 애니메이션
+   ========================================= */
+   @keyframes slideUp {
+       from { opacity: 0; transform: translateY(40px); }
+       to { opacity: 1; transform: translateY(0); }
+   }
+
+   .scroll-hidden {
+       opacity: 0; transform: translateY(60px);
+       transition: all 1s ease-out;
+   }
+   .scroll-show {
+       opacity: 1; transform: translateY(0);
+   }
+
+   /* 하단 푸터 */
+   footer {
+       padding: 80px 0; text-align: center; color: #555; font-size: 0.9rem;
+       border-top: 1px solid rgba(255,255,255,0.1);
+   }
+
+
 }
 
     </style>
 </head>
 <body>
 
-   <div class="video-background">
-     <iframe 
-    src="https://www.youtube.com/embed/mwyfdKKhhAk?autoplay=1&mute=1&controls=0&loop=1&playlist=mwyfdKKhhAk&playsinline=1"
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    style="pointer-events: none;" 
-    allowfullscreen>
+    <div class="video-background">
+    <iframe 
+        src="https://youtu.be/mwyfdKKhhAk" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
     </iframe>
 </div>
 
