--- a/projects.html
+++ b/projects.html
@@ -216,7 +216,7 @@
         <article class="project-card scroll-hidden">
             <div class="card-image">
                 <span class="category-tag">Safety VR</span>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-image-link">
+                <a href="https://www.youtube.com/watch?v=paDIBgLjWTU" target="_blank" class="card-image-link">
                     <img src="project1.png" alt="Safety VR">
                     <div class="play-icon">▶</div>
                 </a>
