--- a/projects.html
+++ b/projects.html
@@ -224,14 +224,14 @@
             <div class="card-content">
                 <h3>산업재해 대응 VR</h3>
                 <p>디지털 트윈 기술을 활용한 산업 현장 재난 안전 대응 콘텐츠입니다. 실제와 같은 시뮬레이션으로 안전 교육의 효율을 극대화합니다.</p>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-link">Watch Video</a>
+                <a href="https://www.youtube.com/watch?v=paDIBgLjWTU" target="_blank" class="card-link">Watch Video</a>
             </div>
         </article>
 
         <article class="project-card scroll-hidden" style="transition-delay: 0.1s;">
             <div class="card-image">
                 <span class="category-tag">Education</span>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-image-link">
+                <a href="https://www.youtube.com/watch?v=yshLZUrstTk&list=PLbSgudqueus7klIZeq3VLuhnaKxKyaLSF" target="_blank" class="card-image-link">
                     <img src="project2.png" alt="Education">
                     <div class="play-icon">▶</div>
                 </a>
@@ -239,14 +239,14 @@
             <div class="card-content">
                 <h3>이차전지 제조공정 교육</h3>
                 <p>울산대학교와 협력하여 개발한 파우치셀 제조공정 VR/PC 프로그램입니다. 복잡한 공정을 가상 공간에서 안전하게 실습합니다.</p>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-link">Watch Video</a>
+                <a href="https://www.youtube.com/watch?v=yshLZUrstTk&list=PLbSgudqueus7klIZeq3VLuhnaKxKyaLSF" target="_blank" class="card-link">Watch Video</a>
             </div>
         </article>
 
         <article class="project-card scroll-hidden" style="transition-delay: 0.2s;">
             <div class="card-image">
                 <span class="category-tag">Digital Human</span>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-image-link">
+                <a href="https://www.youtube.com/watch?v=cNj4wOFIVQc&list=PLbSgudqueus5FiKWTSxU42hsZBxK8Ukkf&index=1" target="_blank" class="card-image-link">
                     <img src="project3.png" alt="Digital Human">
                     <div class="play-icon">▶</div>
                 </a>
@@ -254,14 +254,14 @@
             <div class="card-content">
                 <h3>메타 휴먼 시스템</h3>
                 <p>2025년 특허 출원된 차세대 메타 휴먼 기술입니다. AI 기반의 자연스러운 움직임과 상호작용이 가능한 가상 인간을 구현합니다.</p>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-link">Watch Video</a>
+                <a href="https://www.youtube.com/watch?v=cNj4wOFIVQc&list=PLbSgudqueus5FiKWTSxU42hsZBxK8Ukkf&index=1" target="_blank" class="card-link">Watch Video</a>
             </div>
         </article>
 
         <article class="project-card scroll-hidden">
             <div class="card-image">
                 <span class="category-tag">Medical VR</span>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-image-link">
+                <a href="https://www.youtube.com/watch?v=BmATlQPJC34&list=PLbSgudqueus5SzWKq3xCM3uyHBe1opuvV&index=2" target="_blank" class="card-image-link">
                     <img src="https://images.unsplash.com/photo-1551076805-e1869033e561?q=80&w=1000&auto=format&fit=crop" alt="Dental Simulation">
                     <div class="play-icon">▶</div>
                 </a>
@@ -269,7 +269,7 @@
             <div class="card-content">
                 <h3>치과 방사선 촬영 시뮬레이션</h3>
                 <p>서울대학교 산학협력단과 개발한 의료 교육용 VR 콘텐츠입니다. 정밀한 조작과 360도 영상으로 실습 효과를 높입니다.</p>
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank" class="card-link">Watch Video</a>
+                <a href="https://www.youtube.com/watch?v=BmATlQPJC34&list=PLbSgudqueus5SzWKq3xCM3uyHBe1opuvV&index=2" target="_blank" class="card-link">Watch Video</a>
             </div>
         </article>
 
